RESOLVED FIXED245322
AX: AccessibilityNodeObject never resets m_childrenDirty to false
https://bugs.webkit.org/show_bug.cgi?id=245322
Summary AX: AccessibilityNodeObject never resets m_childrenDirty to false
Tyler Wilcock
Reported 2022-09-17 12:32:26 PDT
AccessibilityNodeObject never resets m_childrenDirty to false
Attachments
Patch (3.98 KB, patch)
2022-09-17 12:36 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-09-17 12:32:40 PDT
Tyler Wilcock
Comment 2 2022-09-17 12:36:15 PDT
EWS
Comment 3 2022-09-17 20:01:28 PDT
Committed 254600@main (d7291370c5df): <https://commits.webkit.org/254600@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462421 [details].
Note You need to log in before you can comment on or make changes to this bug.