AX: AccessibilityNodeObject never resets m_childrenDirty to false https://bugs.webkit.org/show_bug.cgi?id=245322 rdar://problem/100073372

Reviewed by Chris Fleizach.

In https://bugs.webkit.org/show_bug.cgi?id=245212, we moved these
methods from AccessibilityRenderObject to AccessibilityNodeObject:

  - updateChildrenIfNecessary
  - setNeedsToUpdateChildren
  - needsToUpdateChildren
  - setNeedsToUpdateSubtree

But crucially, we did not move the implementation of clearChildren,
which is what resets m_childrenDirty to false when necessary, causing a
performance issue (not a correctness issue) for these objects.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::clearChildren):
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::clearChildren): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/254600@main